# ci.cmake

./: .devcontainer.json  CHANGELOG.md  CMakeLists.txt  README.md  ci.cmake  template.cmake
.github/: dependabot.yml
.github/workflows/: main.yml
test/: main.cpp
test/building/: CMakeLists.txt
test/packaging/: CMakeLists.txt
test/testing/: CMakeLists.txt
